tests/error/while_assign.py
while a = 10:
    print 'hello'
